added constructor and api

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -18,3 +18,18 @@
     opacity: 1;
     pointer-events: all;
 }
+
+.header {
+    margin-top: 40px;
+    max-width: 640px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.close_button {
+    cursor: pointer;
+    background-color: #1C1C21;
+    border: none;
+}
