--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,28 +1,25 @@
 .header {
-    background-color: #1C1C21;
-    min-height: 88px;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
+  background-color: #1c1c21;
+  min-height: 88px;
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
 
-
-
 .menu {
-    display: flex;
+  display: flex;
 }
 
 .menu_item {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
 }
-
