--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -1,19 +1,12 @@
-.modal {
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+.modal_overlay {
     position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
     top: 0;
     left: 0;
-    display: flex;
     align-items: center;
     justify-content: center;
-    pointer-events: none;
-    transition: 0.5s;
-    z-index: 2;
-}
-
-.modal_active {
-    opacity: 1;
-    pointer-events: all;
+    z-index: -1;
 }
