--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,38 +1,38 @@
 .modal {
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
 }
 
 .header {
-    margin-top: 40px;
-    max-width: 640px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  margin-top: 40px;
+  max-width: 640px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .close_button {
-    cursor: pointer;
-    background-color: #1C1C21;
-    border: none;
+  cursor: pointer;
+  background-color: #1c1c21;
+  border: none;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-width: 720px;
-    border-radius: 40px;
-    background-color: #1C1C21;
-    z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 720px;
+  border-radius: 40px;
+  background-color: #1c1c21;
+  z-index: 2;
 }
